--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <!--/Banner-Start-->
     <section class="bannerw3l-hnyv">
         <div class="banner-layer">
-            <video autoplay muted loop controls="true" id="myVideo">
+            <video autoplay muted loop id="myVideo">
                 <source src="assets/images/love.mp4" type="video/mp4">
                 Your browser does not support HTML5 video.
             </video>
