--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <a class="nav-link" href="index.html">男友的祝福</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">好友的祝福</a>
+              <a class="nav-link" href="friend.html">好友的祝福</a>
             </li>
             
           </ul>
@@ -364,7 +364,20 @@
     <!-- //testimonials -->
   
     <!--/footer-->
-   
+    <!--/footer-->
+  <footer class="w3l-footer-22 position-relative">
+
+    <!-- copyright -->
+    <div class="copyright-footer text-center">
+      <div class="container">
+        <div class="columns">
+          <p>© 2023 Make by <a target="_blank" href="https://www.youtube.com/watch?v=EMfithOo7EE" title="Alvin">Alvin</a>
+          </p>
+        </div>
+      </div>
+    </div>
+    <!-- //copyright -->
+  </footer>
 
     <!-- Js scripts -->
     <!-- move top -->
