--- a/friend.html
+++ b/friend.html
@@ -10,7 +10,7 @@
   <link href="//fonts.googleapis.com/css2?family=Jost:wght@300;400;600;700&display=swap" rel="stylesheet">
   <!-- Template CSS -->
   <link rel="stylesheet" href="assets/css/style-liberty.css">
-  <link href="style1.css" rel="stylesheet" type="text/css">
+  <link href="assets/css/style1.css" rel="stylesheet" type="text/css">
 
 </head>
 
@@ -38,10 +38,10 @@
           <ul class="navbar-nav ml-lg-auto">
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html">男友的祝福</a>
+              <a class="nav-link" href="https://hughugbear19971010.github.io/index.html">男友的祝福</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="friend.html">好友的祝福</a>
+              <a class="nav-link" href="https://hughugbear19971010.github.io/friend.html">好友的祝福</a>
             </li>
             <!--//search-right-->
           </ul>
